docs/7.52/md/abennews-30-international.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Release 3.0](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-30.htm) → 

Internationalization in Release 3.0

[1\. SORT ... AS TEXT: Locale-friendly sorting](#!ABAP_MODIFICATION_1@1@)

[2\. CONVERT TEXT: Conversion of texts to a](#!ABAP_MODIFICATION_2@2@)
locale-friendly format

[3\. SET LOCALE: Explicit setting of the text environment](#!ABAP_MODIFICATION_3@3@)

Overview

Since Releases 2.1/2.2, ABAP has provided a number of statements to support the internationalization of programs. SET COUNTRY can be used to define the date and number formatting for a particular country, while SET LANGUAGE makes it possible to change the text pool language. TRANSLATE f TO LOWER/UPPER CASE reacts to the locale category LC\_CTYPE, and when passing data between [application servers](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapplication_server_glosry.htm "Glossary Entry") and front ends and when passing data using RFC, the system respects the SAP [code page](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencodepage_glosry.htm "Glossary Entry").
In Release 3.0, texts can be sorted in a locale-friendly way (specific to culture). Here, the sort order is determined by the locale category LC\_COLLATE.
In addition, the [text environment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentext_environment_glosry.htm "Glossary Entry") which (among other things) defines the locale-specific sort formulae is set automatically according to the language of the active user when an [internal session](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninternal_session_glosry.htm "Glossary Entry") is opened.
Finally, the basis for internationalization has been modified. Using the SAP text environment table TCP0C, text environments are assigned to a four-part key consisting of <PLATFORM, LANGUAGE, COUNTRY, MODIFIER>.

Modification 1

SORT ... AS TEXT: Locale-friendly sorting
The addition ... AS TEXT of the language element [SORT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsort_itab.htm) enables text data to be sorted in a locale-friendly way.

Modification 2

CONVERT TEXT: Conversion of texts to a locale-friendly sortable format
The new CONVERT variant [CONVERT TEXT t INTO SORTABLE CODE sc](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapconvert_text.htm) converts a text to a locale-friendly sortable format.

Modification 3

SET LOCALE: Explicit setting of the text environment
The new SET variant [SET LOCALE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_locale.htm) enables program-driven configuration of the [text environment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentext_environment_glosry.htm "Glossary Entry").